# airada

./: .coverage  .gitignore  README.md  TESTING.md  app.py  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
src/data/: 01_download_data.py  02_preprocess.py  03_ingest_data.py
src/providers/: llm_factory.py
src/tools/: tools_github.py  tools_news.py  tools_papers.py
tests/: __init__.py  conftest.py  test_data_01_download.py  test_data_02_preprocess.py  test_data_03_ingest_data.py  test_llm_factory.py  test_prompts.py  test_tools_github.py  test_tools_news.py  test_tools_papers.py
