[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "airada-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "gradio>=6.7.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[tool.ruff]
line-length = 68

[tool.black]
line-length = 68

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
