[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "airada-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "gradio>=6.7.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "bandit",
    "types-requests"
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "requests-mock>=1.11.0",
]

[tool.ruff]
line-length = 68

[tool.black]
line-length = 68

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
